--- a/style.css
+++ b/style.css
@@ -1,29 +1,69 @@
+:root {
+    --bg-color: #e3dac9;
+    --div-color: antiquewhite;
+    --box-color: #e3d4c9;
+  }
+
 #main {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: var(--bg-color);
 }
 
 #title {
+    margin: 25px 20px 0 20px;
+    padding: 1px;
+    background-color: var(--div-color);
+    border-radius: 10px;
 }
 
-#img-div {
-    float: left;
+
+
+h1, p {
+    padding-left: 40px;
 }
+
+
+
 #tribute-info {
 
+    display: flex;
+    margin: 20px 20px 0 20px;
+}
+
+#info {
+    background-color: var(--div-color);
+    border-radius: 10px;
+    margin-left: 20px;
+    padding: 0 120px 0 20px;
 }
 
 #img-div {
-
-}
-
-#img-caption {
-
-}
-
-#tribute-link {
+    padding: 30px 30px 0 30px;
+    background-color: var(--div-color);
+    border-radius: 10px;
 
 }
 
 footer {
+    padding: 10px;
+    margin: 20px 20px 0 20px;
+    background-color: var(--div-color);
+    border-radius: 10px;
+}
 
+h3 {
+    padding: 10px 10px 10px 15px;
+    background-color: var(--box-color);
+    border-radius: 10px;
+}
+
+li {
+    padding: 20px;
+    font-size: 17px;
+    max-width: 100%;
+    height: auto;
+    list-style-type: none;
+    background-color: var(--box-color);
+    margin: 20px;
+    border-radius: 10px;
 }
